src/disco/components/Addon/styles.scss
@import '~disco/css/inc/vars';
@import '~core/css/inc/mixins';

$addon-padding: 20px;

.addon {
  align-items: center;
  background: #fff;
  border-radius: 3px;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.4);
  display: flex;
  flex-flow: row wrap;
  line-height: 1.5;
  margin-top: 20px;

  blockquote {
    margin: 0;
  }

  .editorial-description {
    color: $header-copy-font-color;
    font-size: 12px;
    margin: 0.75em 0;

    a:link,
    a:visited,
    a:focus,
    a:hover,
    a:active {
      color: $header-copy-font-color;
      text-decoration: underline;
    }

    a:focus,
    a:hover {
      color: $link-hover-color;
    }
  }

  .InstallButton,
  .InstallButton--disabled {
    margin: 0 20px 10px;
  }

  .AMInstallButton {
    margin: 10px 20px;
  }

  &:not(.theme) .Addon-install-button {
    > .switch {
      float: right;

      [dir='rtl'] & {
        float: left;
      }
    }
  }

  .logo {
    align-items: center;
    align-self: stretch;
    display: flex;
    padding: 0 5px;

    @include respond-to(medium) {
      padding: 0 10px;
    }

    @include respond-to(large) {
      padding: 0 15px;
    }

    img {
      display: block;
      height: 64px;
      width: 64px;
    }
  }

  .heading {
    color: $header-copy-font-color;
    font-size: 14px;
    font-weight: medium;
    line-height: 1.2;
    margin: 0;

    a:link,
    a:visited,
    a:focus,
    a:hover,
    a:active {
      color: $header-copy-font-color;
      text-decoration: underline;
    }

    a:focus,
    a:hover {
      color: $link-hover-color;
    }

    // This only corresponds to the link for add-ons not themes which is all
    // a link.
    span {
      color: $secondary-font-color;
      font-size: 10px;
      font-weight: normal;

      a:link,
      a:visited,
      a:focus,
      a:hover,
      a:active {
        color: $secondary-font-color;
      }

      a:focus,
      a:hover {
        color: $link-hover-color;
      }
    }
  }

  .content {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    position: relative;

    .copy {
      flex-grow: 1;
      padding: 20px 20px 15px;
      word-wrap: break-word;

      // Remove the bottom margin of the last element.
      & :last-child {
        margin-bottom: 0;
      }
    }

    @include respond-to(large) {
      .copy {
        padding: 30px 20px;
      }
    }
  }

  &:not(.theme) .content {
    align-items: center;
    flex-direction: row;
    width: calc(100% - 94px);
  }

  .notification {
    align-content: stretch;
    align-items: center;
    bottom: 0;
    color: #fff;
    display: flex;
    flex-direction: row;
    left: 0;
    padding: 15px 80px 15px 20px;
    position: absolute;
    right: 0;
    top: 0;

    [dir='rtl'] & {
      padding: 15px 20px 15px 80px;
    }

    &.overlay-enter.overlay-enter-active {
      transition: 300ms cubic-bezier(0.19, 0.95, 0.39, 1) 400ms;
    }

    &.overlay-enter {
      opacity: 0;
      transform: scale(1.1);
    }

    &.overlay-exit.overlay-exit-active {
      opacity: 0;
      transform: scale(0.9);
      transition: 300ms cubic-bezier(0.19, 0.95, 0.39, 1);
    }

    &.overlay-exit,
    &.overlay-enter.overlay-enter-active {
      opacity: 1;
      transform: scale(1);
    }

    &.error {
      background: #c33c32 url('./img/warning.svg') no-repeat calc(100% - 40px)
        50%;
      z-index: 20;

      [dir='rtl'] & {
        background-position: 40px 50%;
      }
    }

    .message {
      flex-grow: 1;
    }

    .close {
      bottom: 10px;
      color: #fff;
      display: block;
      left: 15px;
      padding: 5px;
      position: absolute;

      [dir='rtl'] & {
        left: auto;
        right: 15px;
      }
    }
  }
}

.addon .ThemeImage {
  border-bottom: 2px solid #f5f5f5;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

